RESOLVED FIXED265943
WebKit::ensureDirectoryExists should use directory path, not absoluteString.
https://bugs.webkit.org/show_bug.cgi?id=265943
Summary WebKit::ensureDirectoryExists should use directory path, not absoluteString.
Kiara Rose
Reported 2023-12-06 09:37:02 PST
WebKit::ensureDirectoryExists should use directory path, not absoluteString.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-12-06 09:37:24 PST
Kiara Rose
Comment 2 2023-12-06 09:39:46 PST
EWS
Comment 3 2023-12-06 09:44:07 PST
Committed 271615@main (199f68082e5b): <https://commits.webkit.org/271615@main> Reviewed commits have been landed. Closing PR #21394 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.