WebKit::ensureDirectoryExists should use directory path, not absoluteString. https://bugs.webkit.org/show_bug.cgi?id=265943

Reviewed by Timothy Hatcher.

Use '.path' and not '.absoluteString' when ensuring the directory exists. Fallout from initial change
in https://github.com/WebKit/WebKit/pull/21309.

* Source/WebKit/Platform/cocoa/CocoaHelpers.mm:
(WebKit::ensureDirectoryExists):

Canonical link: https://commits.webkit.org/271615@main